tests/typing/bad/testfile-string-1.scala
class A { }
class B { def m() { var a: A = "tutu" } }
object Main { def main(args: Array[String]) { } }
